--- a/www/src/css/prism.scss
+++ b/www/src/css/prism.scss
@@ -31,6 +31,7 @@ pre[class*="language-"] {
   margin: 1rem;
   font-size: 18px;
   line-height: 25px;
+  overflow-x: auto;
 }
 
 .token.comment,
